Refactored & Fixed nav bar styling on mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,19 +1,18 @@
 .header-nav {
-  width: 62.5vw;
+  width: 51.2vw;
 
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 2rem 24vw;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(transparent);
+  background-color: transparent;
   transition: 0.2s linear;
 
   position: fixed;
 }
 
-.header-div h2 {
+.header-nav h2 {
   font-size: 3.2rem;
 }
 
@@ -22,7 +21,7 @@
   gap: 2rem;
 }
 
-.header-div a {
+.header-nav a {
   font-size: 1.6rem;
   color: rgb(230, 230, 230);
 
@@ -30,15 +29,25 @@
   background-color: transparent;
 }
 
-.header-div a:hover {
+.header-nav a:hover {
   text-decoration: underline;
 }
 
-.header-div a:active {
+.header-nav a:active {
   color: white;
 }
 
 @media (max-width: 800px) {
+  .header-nav {
+    padding: 1rem 12vw;
+
+    width: 74.1vw;
+  }
+
+  .header-nav h2 {
+    font-size: 2.4rem;
+  }
+
   .header-anchor-home,
   .header-anchor-about,
   .header-anchor-skills,
